Добавляет правки по требованиям W3C валидатора

--- a/source/index.html
+++ b/source/index.html
@@ -18,6 +18,7 @@
         </a>
       </header>
       <section class="features">
+        <h2 class="visually-hidden">Особенности</h2>
          <ul class="list features__list">
            <li class="list__item features__list-item">
              <span>Lorem Ipsum is simply dummy text</span>
@@ -106,9 +107,9 @@
                 eros lacus aliquet velit, quis lobortis risus nunc nec nisi.
               </p>
             </li>
-            <div class="main__list-button">
+            <li class="list__item main__list-button">
               <button type="button">Order</button>
-            </div>
+            </li>
           </ul>
         </div>
         <aside></aside>
